better exception handling in test
corrected some typo in gameTest e gameModelTest and corrected exception handling